Update Website to reflect new publications and projects

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                <!-- <span class="pointer"><a class="bright-blue" role="button" data-toggle="modal" data-target="#modal-map-to-office"><i class="fa fa-map-marker-alt mr-2"></i>Map</a></span> -->
               </td>
             </tr>
-            <tr class="d-flex">
-              <td class="col-2"><i class="fa fa-fw fa-lg fa-phone"></i></td>
-              <td class="col-10"><a href="tel:9738856725">(973) 885-6725</a></td>
+            <!-- <tr class="d-flex"> -->
+            <!--  <td class="col-2"><i class="fa fa-fw fa-lg fa-phone"></i></td> -->
+            <!--  <td class="col-10"><a href="tel:9738856725">(973) 885-6725</a></td> -->
             </tr>
             <tr class="d-flex">
               <td class="col-2"><i class="fa fa-lg fa-at"></i></td>
@@ -100,39 +100,46 @@
         <p class="position-title mt-2 mb-1">Postdoctoral Fellow, University of Notre Dame</p>
        <!-- <p class="position-title mt-0 mb-4">Optional Second Title, School or Organization</p> -->
 
-        <p>Hello! My name is Craig Waitt and I am a postdoctoral researcher as a 
-          computational chemist at the University of Notre Dame. I received my PhD 
-          from the University of Notre Dame, where I worked under the guidance of 
-          Professor <a href="https://wfschneidergroup.github.io/" target="_blank">William Schneider</a>. 
-          My research focuses on the stability of heterogenous catalysts and the reactions 
-          occurring in zeolites and on surfaces. As a computational chemist, I use advanced
-          computer modeling and simulation techniques, particularly Density Functional 
-          Theory (DFT), to understand and predict the behavior of molecules and materials 
-          at the atomic level. I am grateful for the opportunity to continue my research 
-          journey as a postdoc under the mentorship of Professor Schneider, and am excited 
-          to contribute to the advancement of science and technology through my work. 
-          Thank you for visiting my website!
-        </p>        
+        <p>Welcome to the official website of Craig Waitt, Ph.D. I am a postdoctoral 
+          researcher specializing in computational catalytic chemistry at the 
+          University of Notre Dame. I have had the privilege of working under the 
+          esteemed guidance of Professor <a href="https://wfschneidergroup.github.io/" target="_blank">William Schneider</a>,
+          where we utilize computational tools to elucidating chemistries occuring on catalysts
+          at the atomistic level.
+        </p>
+
+        <p>My primary research thrust revolves around understanding the intricacies and nuances
+          of hydrothermal stability on zeolite materials. My work seeks to unravel the behavior 
+          of molecules and materials at the atomic level, utlizing first-principles technqiues
+          (with a particular emphasis on Densiy Functional Theory).
+        </p>    
 
         <!-- ------------------------------------------------------------------------>
         <!-- Delete this section below if you don't want a read more section -------->
         <div id="read-more">
 
-          <p>In addition to my research, I am also passionate about teaching and pedagogy. 
-            I believe that education has the power to transform lives and am dedicated to 
-            helping students of all ages and backgrounds to achieve their full potential. 
-            I have had the opportunity to teach a variety of chemistry courses at the 
-            undergraduate level, and have received positive feedback from my students for 
-            my ability to clearly explain complex concepts and make chemistry engaging 
-            and accessible. I am proud to have received recognition for my teaching 
-            efforts, including winning teaching awards at the University of Notre Dame. 
-            In addition to my work in the classroom, I also enjoy being a mentor to 
-            students, helping them to develop the skills and confidence they need to 
-            succeed in their academic and professional pursuits. I am always looking for 
-            ways to improve my teaching practice and stay up to date with the latest 
-            developments in education. I hope to continue to make a positive impact on 
-            the next generation of scientists and educators through my teaching and 
-            research.
+          <p>Beyond my research endeavors, my passion for education and pedagogy 
+            takes center stage. Firmly believing in the transformative power of 
+            education, I am dedicated to assisting students across diverse 
+            backgrounds in realizing their full potential. Having imparted 
+            knowledge in various undergraduate chemistry courses, I take pride 
+            in the positive feedback received for my adeptness in elucidating 
+            complex concepts and rendering chemistry both engaging and accessible.
+          </p>
+
+          <p> My commitment to education has not gone unnoticed, with accolades 
+            such as teaching awards from the University of Notre Dame underlining 
+            my effectiveness in the classroom. As a mentor, I find immense joy in 
+            guiding students to develop the skills and confidence necessary for 
+            success in academic and professional spheres. Constantly seeking 
+            avenues for enhancing my teaching practice and staying abreast of the 
+            latest educational developments, I aspire to make a lasting impact on 
+            the next generation of scientists and educators through a harmonious 
+            blend of teaching and research.
+          </p>
+            
+          <p>Thank you for visiting my website and feel free to reach out if you
+            have any queastions!
           </p>
 
           <h3><span>Photos</span></h3>
