--- a/research.html
+++ b/research.html
@@ -65,9 +65,20 @@
             <ol class="carousel-indicators">
               <li data-target="#carousel-ID" data-slide-to="0" class="active"></li>
               <li data-target="#carousel-ID" data-slide-to="1"></li>
+              <li data-target="#carousel-ID" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
+                <img src="./img/research/Z-OSDA.png" class="d-block w-100" alt="carousel image">
+                <div class="carousel-caption d-none d-md-block bg-dark">
+                  <a href="https://doi.org/10.1021/acs.jpcc.3c05421" target="_blank">
+                    <h5 class="text-white">Analysis and Augmentation of Guest–Host Interaction Energy 
+                      Models as CHA and AEI Zeolite Crystallization Phase Predictors </h5>
+                  </a>
+                  <p class="text-white">J. Phys. Chem. C 2023, 127, 46, 22740–22751</p>
+                </div>
+              </div>
+              <div class="carousel-item">
                 <img src="./img/research/Free_Energy.png" class="d-block w-100" alt="carousel image">
                 <div class="carousel-caption d-none d-md-block bg-dark">
                   <a href="https://pubs.acs.org/doi/10.1021/acs.jpcc.1c05917" target="_blank">
@@ -100,22 +111,6 @@
 
           <br>
 
-
-        <p>My research focuses on atomistic simulations of heterogenous catalysis on metal surfaces and a class of metal organic frameworks called zeolites. I use Density Functional
-          Theory (DFT) and statistical mechanics in order to draw connections to and elucidate experimental observations. 
-        </p>
-
-        <p>My specific research areas include:</p>
-
-        <div class="col-sm-12">
-          <ul id="reseach-bullets">
-            <li>Zeolite Synthesis and Catalysis</li>
-            <li>Reactions occuring on Metal Surfaces</li>
-            <li>Plasma-assisted Catalysis</li>
-            <li>Statistical Modeling of Entopic Contributions to Free Energy</li>
-          </ul>
-        </div>
-
         <!-- List of Research interests  -->
 
         <!-- Publication -->
@@ -125,6 +120,16 @@
         <h4><strong>Journal Articles</strong></h4>
 
         <ol class="journal-articles">
+          <br>
+          <h5>2023</h5>
+          
+          <li> <strong>Waitt, C.</strong>, Gao, X., Gounder, R., Debellis, A., Prasad, S., Moini, A. 
+            & Schneider,W. F., Analysis and Augmentation of Guest–Host Interaction Energy Models 
+            as CHA and AEI Zeolite Crystallization Phase Predictors,
+            <em>The Journal of Physical Chemistry C.</em>, <strong>2023</strong>, <em>125</em>, 46, 22740–22751. 
+            <a class="urls" href="https://doi.org/10.1021/acs.jpcc.3c05421" target="_blank">doi:10.1021/acs.jpcc.3c05421 </a> 
+          </li>
+
           <br>
           <h5>2022</h5>
           
@@ -141,6 +146,8 @@
             <em>The Journal of Physical Chemistry C.</em>, <strong>2021</strong>, <em>125</em>, 37, 20331-20342. 
             <a class="urls" href="https://pubs.acs.org/doi/10.1021/acs.jpcc.1c05917" target="_blank">doi:10.1021/acs.jpcc.1c05917 </a> 
           </li>
+
+          <br>
 
           <li> Barboun, P.M., Daemen, L.L., <strong>Waitt, C.</strong>, Wu, Z., Schneider, W. F., Hicks, J.C., Inelastic Neutron Scattering Observation of Plasma-Promoted Nitrogen Reduction Intermediates on Ni/γ-Al<sub>2</sub>O<sub>3</sub>,
             <em>ACS Energy Letters</em>, <strong>2021</strong>, <em>6</em>, 6, 2048-2053. 
