updated Trine info

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- Main local styles -->
   <link rel="stylesheet" href="css/main.css">
 
-  <title>Craig Waitt</title>
+  <title>Craig Waitt, <Ph class="D"></Ph></title>
 
 </head>
 
@@ -64,9 +64,9 @@
           <tbody>
             <tr class="d-flex">
               <td class="col-2"><i class="fa fa-fw fa-lg fa-home"></i></td>
-              <td class="col-10">360 Nieuwland Science Hall<br>
-                University of Notre Dame<br>
-                Notre Dame, IN 46556<br>
+              <td class="col-10">373 Best Hall<br>
+                Trine University<br>
+                Angola, IN 46703<br>
                <!-- <span class="pointer"><a class="bright-blue" role="button" data-toggle="modal" data-target="#modal-map-to-office"><i class="fa fa-map-marker-alt mr-2"></i>Map</a></span> -->
               </td>
             </tr>
@@ -76,7 +76,7 @@
             </tr>
             <tr class="d-flex">
               <td class="col-2"><i class="fa fa-lg fa-at"></i></td>
-              <td class="col-10"><a href="mailto:waitt.craig@gmail.com">waitt.craig@gmail.com</a></td>
+              <td class="col-10"><a href="waittc@trine.edu">waittc@trine.edu</a></td>
             </tr>
            <!-- <tr class="d-flex">
               <td class="col-2"><i class="fa fa-lg fa-calendar-plus"></i></td>
@@ -97,26 +97,43 @@
 
         <h1>Craig Waitt, Ph. D.</h1>
 
-        <p class="position-title mt-2 mb-1">Postdoctoral Fellow, University of Notre Dame</p>
+        <p class="position-title mt-2 mb-1">Assistant Professor of Chemistry, Trine University</p>
        <!-- <p class="position-title mt-0 mb-4">Optional Second Title, School or Organization</p> -->
 
-        <p>Welcome to the official website of Craig Waitt, Ph.D. I am a postdoctoral 
-          researcher specializing in computational catalytic chemistry at the 
-          University of Notre Dame. I have had the privilege of working under the 
-          esteemed guidance of Professor <a href="https://wfschneidergroup.github.io/" target="_blank">William Schneider</a>,
-          where we utilize computational tools to elucidating chemistries occuring on catalysts
-          at the atomistic level. 
-        </p>
+       <p> I'm Craig Waitt, Assistant Professor of Chemistry at Trine University, and I'm excited to welcome 
+        you to my website. As a researcher and educator in the field of chemistry, I'm passionate about using 
+        computational tools to help us better understand the intricacies of molecular behavior.
+       </p>
 
-        <p>My primary research thrust revolves around understanding the intricacies and nuances
-          of hydrothermal stability on zeolite materials. My work seeks to unravel the behavior 
-          of molecules and materials at the atomic level, utlizing first-principles technqiues
-          (with a particular emphasis on Densiy Functional Theory).
-        </p>    
+       <p> My research focuses on understanding the stability and reactivity of molecules and catalysts, and I 
+        regularly employ Density Functional Theory (DFT), Wavefunction Theory (WFT), and Machine Learning (ML) tools. 
+        But what really gets me excited is sharing this knowledge with students who are eager to learn how computers 
+        can be used to accelerate their own research aims.
+       </p>
 
-        <!-- ------------------------------------------------------------------------>
+       <p> As an educator, I believe that hands-on experience is key to learning and growth. That's why I'm always 
+        looking for opportunities to collaborate with undergraduate students who share my enthusiasm for computational 
+        chemistry. Whether you're a student looking to gain some experience with computational methods or simply 
+        someone who wants to learn more about how computers can be used in scientific research, I'd love to chat with you.
+       </p>
+
+       <p> On this website, you'll find information about my research group, current and previous projects, tools,
+        and opportunities for undergraduate students to get involved. I hope you'll take a look around, and maybe 
+        even drop by and chat if something catches your eye. Let's explore the fascinating world of computational 
+        chemistry together!
+       </p>
+
+       <!-- ------------------------------------------------------------------------>
         <!-- Delete this section below if you don't want a read more section -------->
         <div id="read-more">
+
+        <p>Before moving to Trine, I have had the privilege of working under the esteemed guidance of Professor 
+          <a href="https://wfschneidergroup.github.io/" target="_blank">William Schneider</a> at the university of Notre Dame,
+          where we utilize computational tools to elucidating chemistries occuring on catalysts at the atomistic level. 
+          My primary research thrust revolves around understanding the intricacies and nuances
+          of hydrothermal stability on zeolite materials. My work seeks to unravel the behavior 
+          of molecules and materials at the atomic level, utlizing first-principles technqiues.
+        </p> 
 
           <p>Beyond my research endeavors, my passion for education and pedagogy 
             takes center stage. Firmly believing in the transformative power of 
@@ -143,6 +160,21 @@
           </p>
 
           <h3><span>Photos</span></h3>
+
+          <div class="row">
+            <div class="col">
+              <img src="./img/personal_img/WFS_June_2024.jpg" class="img-fluid mx-auto d-block border-0 rounded-lg ">
+              <p>  </p>
+              <div class="caption text-center">
+                <h5>Last Day in the Schneider Group (June 2024)</h5>
+              </div>
+
+            </div>
+          </div>
+
+          <br>
+          <br>
+          <br>
 
           <div class="row">
             <div class="col">
@@ -183,22 +215,6 @@
               </div>
 
             </div>
-          </div>
-
-          <br>
-          <br>
-          <br>
-
-          <div class="row">
-            <div class="col">
-              <img src="./img/personal_img/WFS_July_2021.jpg" class="img-fluid mx-auto d-block border-0 rounded-lg ">
-              <p>  </p>
-              <div class="caption text-center">
-                <h5>Schneider Group Summer Party (July 2021)</h5>
-              </div>
-
-            </div>
-
           </div>
 
 
